tests/golden/type_errors/index_non_number.cd
let xs = [1];
print xs["0"];
